--- a/app/src/App.css
+++ b/app/src/App.css
@@ -23,6 +23,7 @@
 }
 
 #keyboard {
+  margin-top: 1rem;
   width: 100%;
   height: 40vh;
   display: block;
@@ -90,12 +91,84 @@
   }
 }
 
+@keyframes flickerAnimation {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.875;
+  }
+  50% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0.875;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-o-keyframes flickerAnimation {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.875;
+  }
+  50% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0.875;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-moz-keyframes flickerAnimation {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.875;
+  }
+  50% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0.875;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes flickerAnimation {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.875;
+  }
+  50% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0.875;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .spacer {
   margin-right: auto;
   margin-left: auto;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  height: 35vh;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 body {
@@ -200,4 +273,11 @@ body {
   margin-right: auto;
   margin-left: auto;
   width: calc(100%);
+}
+
+.fixed {
+  display: block;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
