--- a/app/src/index.css
+++ b/app/src/index.css
@@ -2,4 +2,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  overflow-x: hidden !important;
+}
+
+html,
+body {
+  max-width: 100% !important;
 }
