--- a/app/src/App.css
+++ b/app/src/App.css
@@ -22,6 +22,7 @@
   margin-top: 1rem;
   width: 100%;
   height: 40vh;
+  max-height: 500px;
   display: block;
   box-sizing: border-box;
   max-width: 700px;
@@ -342,10 +343,6 @@ a {
   color: #fff;
 }
 
-A {
-  text-decoration: none;
-}
-
 .genie {
   -webkit-transform: translateZ(0);
   -moz-transform: translateZ(0);
@@ -383,7 +380,7 @@ A {
 #innerStage {
   position: absolute;
   bottom: 10px;
-  width: 260px;
+  width: 350px;
   height: 89px;
   backdrop-filter: blur(120px);
   background-color: rgba(0, 0, 0, 0.2);
