--- a/app/src/App.css
+++ b/app/src/App.css
@@ -19,15 +19,13 @@
 }
 
 #keyboard {
-  margin-top: 1rem;
+  margin: 1rem auto 100px auto;
   width: 100%;
   height: 40vh;
   max-height: 500px;
   display: block;
   box-sizing: border-box;
   max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
   display: inline-flex;
 }
 
