--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "opal";
+  src: url("./fonts/Opal.ttf");
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
